# runna-intervals

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/runna_intervals/: __init__.py  cli.py  config.py  intervals_client.py
src/runna_intervals/models/: __init__.py  intervals.py
src/runna_intervals/runna/: __init__.py  ics_parser.py
tests/: test_ics_parser.py  test_intervals_client.py
