[project]
name = "runna-intervals"
version = "0.1.0"
description = "Convert Runna training plans to Intervals.icu planned workouts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "icalendar>=7.0.1",
]

[project.scripts]
runna-intervals = "runna_intervals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runna_intervals"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
